apps/jd-explorer/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jd-explorer
  labels:
    app.kubernetes.io/managed-by: kustomize
    platform.lyeh.dev/layer: app
