apps/jd-explorer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jd-explorer
  namespace: jd-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jd-explorer
  template:
    metadata:
      labels:
        app: jd-explorer
    spec:
      containers:
        - name: jd-explorer
          image: ghcr.io/leayeh/jd-explorer:sha-246b3d86edbd0fc3422e856087b112e9f39833f1
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
