apps/jd-explorer/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jd-explorer
  namespace: jd-explorer
spec:
  selector:
    app: jd-explorer
  ports:
    - port: 80
      targetPort: 8000
