apps/jd-explorer/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jd-explorer
  namespace: jd-explorer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: ""
    ingress.kubernetes.io/proxy-read-timeout: "300"
    ingress.kubernetes.io/proxy-send-timeout: "300"
spec:
  tls:
    - hosts:
        - jd.lyeh.dev
      secretName: jd-lyeh-dev-tls
  rules:
    - host: jd.lyeh.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jd-explorer
                port:
                  number: 80
